mixed light dark mode fixes

--- a/src/styles/system/applications/applications.css
+++ b/src/styles/system/applications/applications.css
@@ -2,6 +2,10 @@
   max-height: 100vh;
 }
 
+.application .controls-dropdown {
+  background: var(--draw-steel-c-white);
+}
+
 .application.draw-steel .drop-target-area {
   min-height: 300px;
   overflow-y: scroll;
